--- a/agent_sizes.ipynb
+++ b/agent_sizes.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f0be0b82-7524-4b57-8e5b-352e92b8a011",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "(29885, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
     "\n",
     "params, order = count_parameters(speaker)\n",
     "parameter_sizes.append({\n",
-    "    'title': 'The Emergence of Compositional Languages for Numeric Concepts Through Iterated Learning in Neural Agents',\n",
+    "    'title': 'Natural language does not emerge ’naturally’ in multi-agent dialog',\n",
     "    'params': params,\n",
     "    'order': order\n",
     "})\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7e940afa-0728-4935-8fa9-fde5fec80bb0",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "(1870105, 7)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
     "\n",
     "params, order = count_parameters(speaker)\n",
     "parameter_sizes.append({\n",
-    "    'title': 'The Emergence of Compositional Languages for Numeric Concepts Through Iterated Learning in Neural Agents',\n",
+    "    'title': 'Emergence of Grounded Compositional Language in Multi-Agent Populations',\n",
     "    'params': params,\n",
     "    'order': order\n",
     "})\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dfbe0096-2fdd-42b2-ba8d-eb142364a305",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "75478047-c791-49e5-aac6-83588a461779",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "(45253, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c156593c-a89e-4c07-b055-2dc5cc7f3f98",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "(64676, 5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4dda0921-c4c2-4b9c-b031-9ad19fc81ba3",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "75ca3401-c409-4516-aeb3-c04bfd817e55",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
       "Requirement already satisfied: colorama>=0.3.5 in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from Sphinx~=5.1.0->parlai) (0.4.6)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from jinja2->parlai) (2.1.3)\n",
       "Requirement already satisfied: six in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from tensorboardX<=2.5.0->parlai) (1.16.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch->parlai) (3.15.1)\n",
+      "Requirement already satisfied: filelock in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch->parlai) (3.13.1)\n",
       "Requirement already satisfied: sympy in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch->parlai) (1.12.1)\n",
       "Requirement already satisfied: networkx in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch->parlai) (3.1)\n",
       "Requirement already satisfied: mkl<=2021.4.0,>=2021.1.1 in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch->parlai) (2021.4.0)\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "01fbc68f-b6f5-493c-a0d7-14c4aa5c1588",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "(99255, 5)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e8de8fa9-87a8-409e-b9ca-87a957aadf31",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "dc5397d8-4dc0-4390-8fbe-2446518134cd",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "(6264858, 7)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4396d032-3a2d-48e0-a0ba-2c5f841fb39a",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "(46108, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f6172b5d-e6bd-45db-83a5-9772fd44aae0",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "(73872, 5)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "05c8e3a5-748b-4f0c-905b-fb58f44ca8b0",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
        "(1153600, 7)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "f4ab363a-ff87-46a8-8793-2cedbcbe6449",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "af5969c6-3c98-4d07-b799-33ebd8cda360",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
        "(1696909, 7)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "a356a2b5-4df0-40e6-873a-ef6f0e76d2d3",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1043,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/facebookresearch/EGG.git\n",
-      "  Cloning https://github.com/facebookresearch/EGG.git to c:\\users\\nicho\\appdata\\local\\temp\\pip-req-build-u4ih4vjc\n",
+      "  Cloning https://github.com/facebookresearch/EGG.git to c:\\users\\nicho\\appdata\\local\\temp\\pip-req-build-n_66eubi\n",
       "  Resolved https://github.com/facebookresearch/EGG.git to commit f36d123af22eb0d127d2089c993b4eff8314a43d\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
@@ -1058,7 +1058,7 @@
       "Requirement already satisfied: scikit-learn in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from EGG==0.1.0) (1.3.2)\n",
       "Requirement already satisfied: wandb in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from EGG==0.1.0) (0.17.1)\n",
       "Requirement already satisfied: submitit in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from EGG==0.1.0) (1.5.1)\n",
-      "Requirement already satisfied: filelock in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch>=1.1.0->EGG==0.1.0) (3.15.1)\n",
+      "Requirement already satisfied: filelock in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch>=1.1.0->EGG==0.1.0) (3.13.1)\n",
       "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch>=1.1.0->EGG==0.1.0) (4.11.0)\n",
       "Requirement already satisfied: sympy in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch>=1.1.0->EGG==0.1.0) (1.12.1)\n",
       "Requirement already satisfied: networkx in c:\\users\\nicho\\.conda\\envs\\agent_sizes\\lib\\site-packages (from torch>=1.1.0->EGG==0.1.0) (3.1)\n",
@@ -1106,7 +1106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/EGG.git 'C:\\Users\\nicho\\AppData\\Local\\Temp\\pip-req-build-u4ih4vjc'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/EGG.git 'C:\\Users\\nicho\\AppData\\Local\\Temp\\pip-req-build-n_66eubi'\n"
      ]
     }
    ],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "0482c667-2029-4171-a4fe-88a6f11ac3ba",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1125,7 @@
      "output_type": "stream",
      "text": [
       "C:\\git_repos\\2024_05_12_speaker_agent_sizes\\GameBias-EmeCom2020\\modules.py:43: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
-      "  if m.bias is not None:\n"
+      "  init.kaiming_normal(m.weight)\n"
      ]
     },
     {
@@ -1134,7 +1134,7 @@
        "(443584, 6)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "23f964bc-cfa4-4842-9331-f19d979430e9",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1175,7 @@
        "(670982, 6)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "1f750ef3-75ac-4d71-8efa-febd4752ae1a",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
        "(6722000, 7)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "ba7c1a8c-402c-463d-ba3c-1907efb0f4a2",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
        "(1328870, 7)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "1f9e5eb0-5e8c-42ce-ae05-d8ce5034c12d",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
        "(2214370, 7)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "b241edf6-e1ed-4a4c-8aab-4519f0c9bba6",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
        "(11524635, 8)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "afc74b30-c780-4591-b664-c49809f1483b",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
        "(23304, 5)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "id": "1499f908-735f-4393-ac9b-2429c2db9929",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1595,7 @@
        "(132293, 6)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "2a18ce39-6012-4b25-858c-593e7bad7098",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1675,7 @@
        "(24379280, 8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "id": "6eccf555-743b-44b5-8be9-df89600271e5",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1731,7 @@
        "(141056, 6)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "b9a3852c-c293-4a94-9985-f910f8f43fb1",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1775,7 @@
        "(135306, 6)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "id": "0fff044a-28df-4aad-af7a-2759fd3296e2",
    "metadata": {},
    "outputs": [
@@ -1839,7 +1839,7 @@
        "(106880, 6)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "b959397b-70eb-40f6-8a08-598753cb4b52",
    "metadata": {},
    "outputs": [
@@ -1907,7 +1907,7 @@
        "(17810, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,17 +1966,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c564fd43-d62f-455c-9139-f23683bb8527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1153600, 7)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The paper says\n",
     "# \"We have to define environments, agent architectures, and optimization methods for language emer-\n",
     "# gence simulations. This paper adopts the framework of Chaabouni et al. (2020). ...\n",
     "# We follow Chaabouni et al. (2020) as well for the architecture and optimization method.\"\n",
     "\n",
-    "# Same game and architecture as Chaabouni, spo inherit param size results from that paper:\n",
+    "# Same game and architecture as Chaabouni, so inherit param size results from that paper:\n",
     "inherits_from = 'Compositionality and Generalization in Emergent Languages'\n",
     "previous_calculation = [p for p in parameter_sizes if p['title'] == inherits_from][0]\n",
     "params, order = previous_calculation['params'], previous_calculation['order']\n",
@@ -1999,12 +2010,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "324c8637-1048-419d-b751-ef2cee667cd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1153600, 7)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "params, order = count_parameters(nn.Sequential(CompGenNet(), CompGenNet()))\n",
+    "# Same game and architecture as Chaabouni, amnd \"On the word boundaries\"\n",
+    "# so inherit param size results from Chaabouni. Additional language model\n",
+    "# is conceptualised to be part of the receiver.\n",
+    "\n",
+    "inherits_from = 'Compositionality and Generalization in Emergent Languages'\n",
+    "previous_calculation = [p for p in parameter_sizes if p['title'] == inherits_from][0]\n",
+    "params, order = previous_calculation['params'], previous_calculation['order']\n",
+    "\n",
     "parameter_sizes.append({\n",
     "    'title': \"Lewis's Signaling Game as beta-VAE For Natural Word Lengths and Segments\",\n",
     "    'params': params,\n",
@@ -2012,6 +2041,20 @@
     "})\n",
     "\n",
     "params, order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "69599ebb-ea51-4d06-ad8e-2e3a7932c600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "os.chdir(original_working_directory)\n",
+    "\n",
+    "pd.DataFrame(parameter_sizes).to_csv('output.csv', encoding='utf-8', index=False)"
    ]
   }
  ],
