Wrote minimal readme so that the code is ready to publish

--- a/agent_sizes.ipynb
+++ b/agent_sizes.ipynb
@@ -1043,7 +1043,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/facebookresearch/EGG.git\n",
-      "  Cloning https://github.com/facebookresearch/EGG.git to c:\\users\\nicho\\appdata\\local\\temp\\pip-req-build-n_66eubi\n",
+      "  Cloning https://github.com/facebookresearch/EGG.git to c:\\users\\nicho\\appdata\\local\\temp\\pip-req-build-4s202juw\n",
       "  Resolved https://github.com/facebookresearch/EGG.git to commit f36d123af22eb0d127d2089c993b4eff8314a43d\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
@@ -1106,7 +1106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/EGG.git 'C:\\Users\\nicho\\AppData\\Local\\Temp\\pip-req-build-n_66eubi'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/facebookresearch/EGG.git 'C:\\Users\\nicho\\AppData\\Local\\Temp\\pip-req-build-4s202juw'\n"
      ]
     }
    ],
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "69599ebb-ea51-4d06-ad8e-2e3a7932c600",
    "metadata": {},
    "outputs": [],
