Added some code to a repository so that we don't have to use parlai, which was causing bugs. Updated the README. Added pandas to requirements.

--- a/agent_sizes.ipynb
+++ b/agent_sizes.ipynb
@@ -414,31 +414,12 @@
    "id": "64b18d0f-2ff1-43fe-9a86-8b02ece38d4f",
    "metadata": {},
    "source": [
-    "We have to temporarily install parlai for this one, then uninstall it, then clean up after ourselves."
+    "For this one we've added a module to the repository in the appropriate folder, containing some code copied from https://github.com/facebookresearch/ParlAI, to avoid haveing to actually install parlai, which messes with some of the other packages we need due to compatibility issues. The parameter result is unchanged."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4dda0921-c4c2-4b9c-b031-9ad19fc81ba3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "transformers 4.42.4 requires huggingface-hub<1.0,>=0.23.2, but you have huggingface-hub 0.17.3 which is incompatible.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install parlai --quiet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "01fbc68f-b6f5-493c-a0d7-14c4aa5c1588",
    "metadata": {},
    "outputs": [
@@ -448,7 +429,7 @@
        "(107956, 6)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,69 +459,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eba8c75f-a3e7-4e40-9b95-56c9f3bcc0f9",
-   "metadata": {},
-   "source": [
-    "Reinstall newer version of attrs so that everything else can run!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e8de8fa9-87a8-409e-b9ca-87a957aadf31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip uninstall -y parlai --quiet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "11ec3369-48dc-4a7c-8c9a-ea2d884bf3a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(original_working_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2fe54e77-00e7-4ec2-8963-a87bcbf10ecc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Channels:\n",
-      " - defaults\n",
-      " - conda-forge\n",
-      " - nvidia\n",
-      " - pytorch\n",
-      "Platform: win-64\n",
-      "Collecting package metadata (repodata.json): ...working... done\n",
-      "Solving environment: ...working... done\n",
-      "\n",
-      "# All requested packages already installed.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!conda install -y --file conda_requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "82e59a4c-852a-4e3c-97cf-74a834d62b28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install --quiet -r pip_requirements.txt"
    ]
   },
   {
@@ -553,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "dc5397d8-4dc0-4390-8fbe-2446518134cd",
    "metadata": {},
    "outputs": [
@@ -563,7 +488,7 @@
        "(6264858, 7)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "4396d032-3a2d-48e0-a0ba-2c5f841fb39a",
    "metadata": {},
    "outputs": [
@@ -656,7 +581,7 @@
        "(46108, 5)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "f6172b5d-e6bd-45db-83a5-9772fd44aae0",
    "metadata": {},
    "outputs": [
@@ -745,7 +670,7 @@
        "(73872, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "05c8e3a5-748b-4f0c-905b-fb58f44ca8b0",
    "metadata": {},
    "outputs": [
@@ -790,7 +715,7 @@
        "(1153600, 7)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "af5969c6-3c98-4d07-b799-33ebd8cda360",
    "metadata": {},
    "outputs": [
@@ -868,7 +793,7 @@
        "(1696909, 7)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "0482c667-2029-4171-a4fe-88a6f11ac3ba",
    "metadata": {},
    "outputs": [
@@ -926,7 +851,7 @@
        "(443584, 6)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "23f964bc-cfa4-4842-9331-f19d979430e9",
    "metadata": {},
    "outputs": [
@@ -967,7 +892,7 @@
        "(670982, 6)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "ba7c1a8c-402c-463d-ba3c-1907efb0f4a2",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "b2d8b0af-509b-47cf-aea4-327a4a06efb9",
    "metadata": {},
    "outputs": [],
@@ -1288,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "1f9e5eb0-5e8c-42ce-ae05-d8ce5034c12d",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1223,7 @@
        "(2214370, 7)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,6 +1231,10 @@
    "source": [
     "os.chdir(original_working_directory)\n",
     "os.chdir('Interaction-history-as-a-source-of-compositionality/common')\n",
+    "\n",
+    "\n",
+    "if \"agents\" in sys.modules:\n",
+    "    del sys.modules[\"agents\"] # we used `agents` before from a different repository!\n",
     "\n",
     "# from egg import core\n",
     "from visual_classifier import Vision\n",
@@ -1344,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "b241edf6-e1ed-4a4c-8aab-4519f0c9bba6",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1283,7 @@
        "(11524635, 8)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "afc74b30-c780-4591-b664-c49809f1483b",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1331,7 @@
        "(23304, 5)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "1499f908-735f-4393-ac9b-2429c2db9929",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1381,7 @@
        "(132293, 6)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "2a18ce39-6012-4b25-858c-593e7bad7098",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1461,7 @@
        "(24379280, 8)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "6eccf555-743b-44b5-8be9-df89600271e5",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1517,7 @@
        "(141056, 6)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "b9a3852c-c293-4a94-9985-f910f8f43fb1",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "0fff044a-28df-4aad-af7a-2759fd3296e2",
    "metadata": {},
    "outputs": [
@@ -1715,7 +1644,7 @@
        "(106880, 6)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "b959397b-70eb-40f6-8a08-598753cb4b52",
    "metadata": {},
    "outputs": [
@@ -1783,7 +1712,7 @@
        "(17810, 5)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "c564fd43-d62f-455c-9139-f23683bb8527",
    "metadata": {},
    "outputs": [
@@ -1852,7 +1781,7 @@
        "(1153600, 7)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "324c8637-1048-419d-b751-ef2cee667cd7",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1825,7 @@
        "(1153600, 7)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "69599ebb-ea51-4d06-ad8e-2e3a7932c600",
    "metadata": {},
    "outputs": [
@@ -2142,7 +2071,7 @@
        "25  Lewis's Signaling Game as beta-VAE For Natural...   1153600      7"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "d6de38d3-acf2-4001-8d51-af70f28d4565",
    "metadata": {},
    "outputs": [
@@ -2235,7 +2164,7 @@
        "21  Emergent Communication: Generalization and Ove...  25692338      8"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2256,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "d217ece1-947c-427c-9c1c-98b27f222f8b",
    "metadata": {},
    "outputs": [
@@ -2284,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "4be2cabe-1510-4cd6-b6cd-6997551532c7",
    "metadata": {},
    "outputs": [],
